Fix header whitespace bug

--- a/FanfictionFrontend/assets/css/global.css
+++ b/FanfictionFrontend/assets/css/global.css
@@ -11,11 +11,13 @@
     font-weight: normal;
 }
 
-html, body { /* Это нужно, чтобы избавиться от белого пространства вокруг хэдера */
+/* Это нужно, чтобы избавиться от белого пространства вокруг хэдера */
+html, body {
     width: 100%;
     height: 100%;
     margin: 0px;
     padding: 0px;
+    min-width: max-content;
 }
 
 body {
